--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
+    "@splinetool/react-spline": "^4.0.0",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
