--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,3 +1,39 @@
-node_modules
-# Keep environment variables out of version control
+# Node.js dependencies
+node_modules/
+npm-debug.log
+yarn-error.log
+package-lock.json
+
+# Environment Variables
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Firebase Credentials (Sensitive!)
+serviceAccountKey.json
+
+# Logs
+logs/
+*.log
+debug.log
+error.log
+
+# Build files
+dist/
+build/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDE/editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Misc
+*.bak
+*.old
